[package]
name = "font2bytes"
version = "0.1.0"
authors = ["Dominik Kapusta <dominik@kapusta.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.15.1"
structopt = "0.3.4"
strum = "0.16.0"
strum_macros = "0.16.0"